# anki

./: .dockerignore  .gitignore  BUG_FIXES.md  BUG_FIXES_ROUND3.md  BUG_FIXES_ROUND4.md  CHANGELOG.md  DATABASE_SCHEMA.md  Dockerfile  README.md  ai_config.json.example  article_pipeline.py  build.bat  build.sh  deploy.bat  deploy.sh  docker-compose.yml  docker-compose.ymlbak  enrich_content.py  migrate_db.py  nginx-reverse-proxy.conf  re-deployment.sh  run_ai_model_test.bat  run_pipeline.bat  setup_e2e.py  test_review.py
backend/: .env.example  DATABASE_SCHEMA.md  dedup_decks.py  manage_users.py  migrate_cards_progress.py  migrate_quiz_columns.py  migrate_schema.py  migrate_study_prefs.py  pyproject.toml  run_e2e_server.py  test_card3.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  ai_config.py  ai_interaction_log.py  ai_job.py  article_analysis.py  article_source.py  card.py  category.py  deck.py  ingestion.py  prompt_config.py  review_log.py  study_preset.py  study_session.py  tag.py  user.py  user_card_progress.py
backend/app/routers/: ai.py  ai_jobs.py  article_analysis.py  auth.py  cards.py  categories.py  decks.py  import_export.py  ingestion.py  (+9 more)
backend/tests/: conftest.py  test_ai_service.py  test_article_analysis.py  test_auth.py  test_batch7_features.py  test_cards.py  test_decks.py  test_dedup_service.py  test_fsrs_service.py  test_import_export.py  test_ingestion.py  test_ingestion_parser.py  test_mix_mode.py  test_new_features.py  test_pipeline.py  test_question_generator.py  test_quiz.py  test_review.py
(+111 files in other folders)
